--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
         .card h3 { border-bottom: 1px solid #F1F3F5; padding-bottom: 10px; margin: 0 0 15px 0; font-size: 1rem; font-weight: 700; color: var(--primary-dark); display: flex; align-items: center; }
         .bonsai-item { display: flex; align-items: center; padding: 15px; border-bottom: 1px solid #F1F3F5; cursor: pointer; transition: background 0.2s; }
         .bonsai-item:hover { background: #F8F9FA; }
-        .thumb-icon { width: 60px; height: 60px; border-radius: 50%; margin-right: 15px; display: flex; align-items: center; justify-content: center; font-size: 1.5rem; background: var(--card-bg); border: 2px solid; flex-shrink: 0; overflow: hidden; background-size: cover; background-position: center; }
+        
+        /* MODIFICATION ICI : Taille passée de 60px à 75px */
+        .thumb-icon { width: 75px; height: 75px; border-radius: 12px; margin-right: 15px; display: flex; align-items: center; justify-content: center; font-size: 1.5rem; background: var(--card-bg); border: 2px solid; flex-shrink: 0; overflow: hidden; background-size: cover; background-position: center; }
         
         /* FORM & INPUTS */
         .leaf-preview { display: flex; flex-direction: column; align-items: center; justify-content: center; width: 100%; min-height: 180px; margin-bottom: 20px; border-radius: var(--radius); background: #E9ECEF; border: 1px dashed #ADB5BD; position: relative; overflow: hidden; }
