--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             --danger: #DC3545; 
             --success: #28A745; 
             
-            /* MODIFICATION : Nouvelle couleur Marron foncé pour le bouton */
-            --brown-btn: #5D4037;
+            /* MODIFICATION : Marron plus clair pour le bouton */
+            --brown-btn: #8D6E63;
 
             /* DIVERS */
             --radius: 12px; 
@@ -170,7 +170,7 @@
         .btn-action { display: block; width: 100%; padding: 14px; margin-top: 15px; border: none; border-radius: 8px; font-weight: 700; color: white; cursor: pointer; box-shadow: 0 4px 6px rgba(0,0,0,0.08); }
         .bg-blue { background: var(--primary); } .bg-green { background: var(--success); } .bg-red { background: var(--danger); }
         
-        /* MODIFICATION : Bouton flottant en Marron foncé et texte blanc */
+        /* MODIFICATION : Bouton flottant en Marron plus clair */
         .add-bonsai-btn-float { 
             width: 100%; 
             padding: 15px; 
@@ -178,7 +178,7 @@
             text-align: center; 
             font-size: 1.1rem; 
             font-weight: 700; 
-            background: var(--brown-btn); /* Utilise le nouveau marron */
+            background: var(--brown-btn); /* Nouvelle teinte */
             color: #FFFFFF; /* Texte blanc */
             border: none; 
             border-radius: var(--radius); 
